fixing white space

--- a/prototype/css/styles.css
+++ b/prototype/css/styles.css
@@ -271,7 +271,7 @@ h2{
 	Mobile Styles - About
 -------------------------------*/
 /* centering the text with the background image */
-.h1-about{
+.menu-about-h1{
 	position: absolute;
 	top: 800px;
 	left: 150px;
@@ -373,12 +373,6 @@ h4{
 	background-color: #74B3CE;
 	height: 800px;
 }
-.menu-h1{
-	position: absolute;
-	top: 780px;
-	left: 150px;
-	z-index: 1;
-} 
 /* adding a background color to each menu item to make it look visually apealing to the user */
 .menu{
 	background-color: #D7C0D8;
@@ -622,12 +616,13 @@ textarea#text{
 	Tablet styles - about us
  ----------------------------*/
  /* Header section and making it match the mockup*/
-.h1-about{
+.menu-about-h1{
 	font-size: 6rem;
 	position: absolute;
 	top: 650px;
 	right: 120px;
 	left: 100px;
+	z-index: 1;
 }
  /* Making a grid for our team to be responsive and to be visually appealing*/
  .our-team{
@@ -709,14 +704,6 @@ textarea#text{
 /*----------------------------
 	Tablet styles - Menu
  ----------------------------*/
- /* header styles  */
-.menu-h1{
-   font-size: 6rem;
-   position: absolute;
-   top: 650px;
-   right: 120px;
-   left: 100px;
-}
 /* menu images and scaling them to match their container */
 .menu-image{
 	width: 100%;
@@ -833,6 +820,11 @@ h3.feedback{
    		height: 287px;
     	object-fit: cover;
 	}
+	/* making the grid be inbetween the header image and the banner */
+	.intro{
+		position: relative;
+		bottom: 50px;
+	}
 	/* Making a grid for the home of the little boy and ice cream so it matches the provided mockup*/
 	.intro{
 		display: grid;
@@ -937,11 +929,12 @@ h3.feedback{
 	/* ------------------------
 		Desktop styles - about
 	---------------------------*/
-	.h1-about{
+	.menu-about-h1{
 		position: absolute;
 		top: 600px;
-		right: 200px;
+		left: 750px;
 		color: white;
+		z-index: 1;
 	}
 	/* making a grid to display as three columns and one row so it is easier to read on the desktop version */
 	.who-what-where{
@@ -963,6 +956,13 @@ h3.feedback{
 	}
 	.three-w{
 		padding-right: 50px;
+		line-height: 30px;
+	}
+	.who-what-where{
+		position: relative;
+		bottom: 110px;
+		left: 100px;
+		max-width: 85%;
 	}
 	/* Making a grid for our team and to match the mockup and it is easier to view on the desktop*/
 	.our-team{
@@ -1075,12 +1075,6 @@ h3.feedback{
 	/* ------------------------
 		Desktop styles - menu
 	---------------------------*/
-	.menu-h1{
-		position: absolute;
-		top: 600px;
-		right: 200px;
-		color: white;
-	}
 	/* Creating a 4x3 grid for all twelve menu items  */
 	.menu-items{
 		display: grid;
@@ -1135,6 +1129,8 @@ h3.feedback{
 		margin-bottom: 20px;
 		margin-left: 10px;
 		margin-right: 15px;
+		position: relative;
+		bottom: 75px;
 	}
 	/* makng the menu images the same size */
 	.menu-image{
